feat: enhance task management with new status-based endpoints and update task date handling